traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:15: error: ';' expected but integer literal found.
    } diag+=1
            ^